2004-10-05 cprov:
     First Release, it was never tested with the entire set of 
     sourcepackages (7400), obviosily because the long time that 
     it takes, but was tested many times in a small set (~200).
     The DOAP insertions are not complete may we can improve it 
     ASAP.

2004-10-06 cprov:
     -> Skiping Already added projects
     -> List of Packages comming from Sources file (Packages.gz)